# cotacoes_amigoz_luiz_felipe

./: .gitignore  Dockerfile  README.md  activate_venv.ps1  activate_venv.sh  docker-compose.yml  manage.py  mock_api.py  pyproject.toml
app/: settings.py  urls.py
core/: serializers.py  urls.py  views.py
core/aplicacao/: calcular_melhor_cotacao.py
core/services/: cotacao_dolar.py  cotacao_euro.py  cotacao_moedas.py
core/tests/aplicacao/: test_melhor_cotacao.py
core/utils/: async_tools.py
cotacoes/app/: settings.py  urls.py
cotacoes/core/: apps.py  serializers.py  views.py
cotacoes/core/aplicacao/: calcular_melhor_cotacao.py
cotacoes/core/dominio/: modelo.py
cotacoes/core/services/: cotacao_moedas.py
cotacoes/core/tests/aplicacao/: test_melhor_cotacao.py
cotacoes/core/tests/integracao/: test_api_cotacoes.py
cotacoes/core/tests/mocks/: mock_cotacao_api.py
cotacoes/core/utils/: async_tools.py
